# devitway-rag-starter-pivlab-fork

./: .gitignore  README.md  config.py  docker-compose.yml  env.example  ingest.py  mcp_server.py  pyproject.toml  requirements.txt
docs/: example.md
rag/: cli.py  config.py  ingest.py  mcp_server.py
